--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<div class="inner">
 						<header>
 							<h1>My Techie Live</h1>
-							<p>A video gallery of my some of my favourite songs<br>
+							<p>A video gallery of some of my favourite songs<br>
 								designed by yours truelly <a href="https://www.linkedin.com/in/eliasliasu/">Elias Liasu</a>.</p>
 						</header>
 						<a href="#main" class="more">Learn More</a>
