--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 							</div>
 							<!-- Box 2 -->
 							<div class="box">
-								<a href="https://youtu.be/Un4Qz9yoK8A?si=l4GqUsjqIUE28RUT" class="image fit"><img src="images/strong.jpg" alt="" width="600" height="338"></a>
+								<a href="https://youtu.be/aXEwWz78R9U?si=VUA2RLQETR5xWatw" class="image fit"><img src="images/strong.jpg" alt="" width="600" height="338"></a>
 								<div class="inner">
 									<h3>"He will make you strong"</h3>
 									<p>A vocal rendering of the song "He will make you strong" with subtitle. Enjoy</p>
-									<a href="https://youtu.be/Un4Qz9yoK8A?si=l4GqUsjqIUE28RUT" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/aXEwWz78R9U?si=VUA2RLQETR5xWatw" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 							<!-- Box 3 -->
